tests/sources/invalid/borrow/branch_move_errors.fire
// Branch-sensitive ownership error tests

import @firescript/std.io.println;

void consume(string s) {
    println(s);
}

string value = "branch";
int32 cond = 1i32;

if (cond == 1i32) {
    consume(value);  // value moved on this path
}

println(value); // Error: value may have moved in the if branch
